fix: установить в проекте java 21-corretto, заменить .get(0) на .getFirst()